javaDSL/src/test/resources/typeSystemTestModels/valid/expressions/ArrayDimensionByExpression.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.expressions;

import java.lang.String;

public class ArrayDimensionByExpressionValid {
  char c = 'a';
  int[] n = new int[c];
  double[] m = new double[1];
  String[][] mm = new String[1][1];

}
