javaDSL/src/test/resources/typeSystemTestModels/invalid/fieldsAndLocalVars/Third.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.fieldsAndLocalVars;

import java.lang.String;

public class Third<T> extends Second<String> {

}
